fix: remove border collapse design

--- a/src/components/Box/Box.scss
+++ b/src/components/Box/Box.scss
@@ -2,6 +2,7 @@
   padding: 24px 16px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   background: rgba(255, 255, 255, 0.5);
+  background-clip: padding-box;
   border-radius: 8px;
 }
 .box.line {
